objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Supported__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ad Supported</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Episode</fullName>
                </value>
                <value>
                    <fullName>Movie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cue_Points__c</fullName>
        <label>Cue Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Subtype__c</fullName>
        <label>Data Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>collection</fullName>
                </value>
                <value>
                    <fullName>curated</fullName>
                </value>
                <value>
                    <fullName>episode</fullName>
                </value>
                <value>
                    <fullName>genre</fullName>
                </value>
                <value>
                    <fullName>season</fullName>
                </value>
                <value>
                    <fullName>series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asset</fullName>
                    <default>true</default>
                    <label>asset</label>
                </value>
                <value>
                    <fullName>collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episode_Number__c</fullName>
        <label>Episode Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Episode_Title__c</fullName>
        <formula>if( ISPICKVAL( Data_Subtype__c , &quot;Episode&quot;), 

Series__c &amp;&quot; S&quot;&amp;if( LEN(Text(  Season_Number__c ))=1,&quot;0&quot;&amp; Text(Season_Number__c ) ,TEXT(Season_Number__c ))&amp;&quot;E&quot;&amp;if(Len(text(  Episode_Number__c ))=1,&quot;0&quot;&amp;Text(Episode_Number__c ), text(Episode_Number__c )) 

, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Episode Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoList__c</fullName>
        <label>GeoList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Playlists__c</fullName>
        <label>Manual Playlists</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main Navigation</fullName>
                </value>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Hero Carousel</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Talk</fullName>
                </value>
                <value>
                    <fullName>Dating</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Specials</fullName>
                </value>
                <value>
                    <fullName>Jakes Picks</fullName>
                </value>
                <value>
                    <fullName>Popular Shows</fullName>
                </value>
                <value>
                    <fullName>Our Favorites</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poster_URL__c</fullName>
        <label>Poster URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <label>Published</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublished</fullName>
                    <default>true</default>
                    <label>Unpublished</label>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Staging-stitch</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Staging-trim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roku_Caption_File__c</fullName>
        <label>Roku Caption File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Season_Number__c</fullName>
        <formula>Season__r.Season_Number__c</formula>
        <label>Season Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Season</label>
        <referenceTo>Season__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <formula>Season__r.Series__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_Tag__c</fullName>
        <label>Sharing Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <label>Thumbnail URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Transform__c</fullName>
        <label>Transform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebVTT_Captions_URL__c</fullName>
        <label>WebVTT Captions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ends_at__c</fullName>
        <label>ends_at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>starts_at__c</fullName>
        <label>starts_at</label>
        <type>Date</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Series__c</columns>
        <columns>Published__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cheaters</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Roku_Caption_File__c</columns>
        <columns>Description__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <filters>
            <field>Season__c</field>
            <operation>contains</operation>
            <value>Cheaters</value>
        </filters>
        <label>Cheaters</label>
    </listViews>
    <listViews>
        <fullName>Happy_Yoga</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Roku_Caption_File__c</columns>
        <columns>Description__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <filters>
            <field>Season__c</field>
            <operation>contains</operation>
            <value>happy yoga</value>
        </filters>
        <label>Happy Yoga</label>
    </listViews>
    <listViews>
        <fullName>Hero_Carousel</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Poster_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Hero Carousel</value>
        </filters>
        <label>Hero Carousel</label>
    </listViews>
    <listViews>
        <fullName>Jakes_Picks</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Poster_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Jakes Picks</value>
        </filters>
        <label>Jakes Picks</label>
    </listViews>
    <listViews>
        <fullName>Main_Navigation</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Poster_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Main Navigation</value>
        </filters>
        <label>Main Navigation</label>
    </listViews>
    <listViews>
        <fullName>Movies</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Roku_Caption_File__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>Movies</value>
        </filters>
        <label>Movies</label>
    </listViews>
    <listViews>
        <fullName>Our_Favorites</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Poster_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Our Favorites</value>
        </filters>
        <label>Our Favorites</label>
    </listViews>
    <listViews>
        <fullName>Popular_Shows</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Poster_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Popular Shows</value>
        </filters>
        <label>Popular Shows</label>
    </listViews>
    <listViews>
        <fullName>Ron_Hazelton</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Roku_Caption_File__c</columns>
        <columns>Description__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <filters>
            <field>Season__c</field>
            <operation>contains</operation>
            <value>Ron Hazelton</value>
        </filters>
        <label>Ron Hazelton</label>
    </listViews>
    <listViews>
        <fullName>bill_cunningham</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Season_Number__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Roku_Caption_File__c</columns>
        <columns>Description__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>Nosey</value>
        </filters>
        <filters>
            <field>Data_Type__c</field>
            <operation>equals</operation>
            <value>asset</value>
        </filters>
        <filters>
            <field>Season__c</field>
            <operation>contains</operation>
            <value>bill cunningham</value>
        </filters>
        <label>bill cunningham</label>
    </listViews>
    <nameField>
        <displayFormat>REF{000000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>